<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        android:layout_marginBottom="20dp"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        android:layout_marginBottom="20dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#F44336"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="#4562d6"/>

    </LinearLayout>

</LinearLayout>